--- a/style.css
+++ b/style.css
@@ -200,3 +200,31 @@ ul li {
     left: -15px;
     top: 50%;
 }
+
+.recipes {
+    margin-top: 145px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.recipe {
+    width: 30%;
+    height: 600px;
+    position: relative;
+}
+
+.recipe__img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
+
+.recipe__title {
+    position: absolute;
+    bottom: 0;
+    background: rgba(128, 0, 0, .8);
+    color: white;
+    width: 100%;
+    text-align: center;
+    padding: 20px 0;
+}
